# disc-tui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/app/: mod.rs
