[package]
name = "disc-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tui = "0.18"
crossterm = "0.23"
clap = {version = "3.2", features = ["derive"]}

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "http", "model"]